[NA]fix(sidebar): Fix item displaying when label is too long (#614)

--- a/src/theme/components/_sidebar.scss
+++ b/src/theme/components/_sidebar.scss
@@ -34,6 +34,12 @@
 
       & .item > .item__label {
          vertical-align: top;
+         max-width: calc(100% - 40px);
+         white-space: nowrap;
+         overflow: hidden;
+         display: inline-block;
+         text-overflow: ellipsis;
+         padding-right: 10px;
       }
 
       &:not(.complex-mode) {
@@ -147,6 +153,7 @@
             font-family: $egeo-nunito-sans;
             font-size: $egeo-font-size-xxxsmall;
             float: right;
+            display: inline-block;
             .result__text {
                color: $neutral-10;
                text-align: center;
